--- a/_sass/sassline/_modular-scale.scss
+++ b/_sass/sassline/_modular-scale.scss
@@ -16,15 +16,15 @@ $modular-scale: (
     iota:    11.5
   ),
   scale-1: (
-    alpha:   72.0,
-    beta:    64.0,
-    gamma:   36.0,
-    delta:   30.7,
-    epsilon: 22.5,
+    alpha:   36.0,
+    beta:    30.0,
+    gamma:   30.0,
+    delta:   24.0,
+    epsilon: 20.0,
     zeta:    20.0,
-    eta:     18,
-    theta:   15.0,
-    iota:    12.7
+    eta:     20.0,
+    theta:   12.8,
+    iota:    11.5
   ),
   scale-2: (
     alpha:   72.0,
@@ -38,6 +38,17 @@ $modular-scale: (
     iota:    12.7
   ),
   scale-3: (
+    alpha:   72.0,
+    beta:    64.0,
+    gamma:   36.0,
+    delta:   30.7,
+    epsilon: 22.5,
+    zeta:    20.0,
+    eta:     18,
+    theta:   15.0,
+    iota:    12.7
+  ),
+  scale-4: (
     alpha:   72.0,
     beta:    64.0,
     gamma:   36.0,
